--- a/index1.html
+++ b/index1.html
@@ -19,7 +19,7 @@
     </header>
     <nav>
       <a href="#"><h3 class="new">New Color</h3></a> <!--refresh random variable-->
-      <a href="#"><h3 class="easy">Easy</h3></a><!--3-->
+      <a href="#"><h3 class="easy" onclick="myFunction()">Easy</h3></a><!--3-->
       <a href="#"><h3 class="hard">Hard</h3></a><!--9-->  
     </nav>
 <article>
@@ -30,12 +30,11 @@
       <div class="col-lg-3 col-md-4 col-6 hola"></div>
       <div class="col-lg-3 col-md-4 col-6 hola"></div>
       <div class="col-lg-3 col-md-4 col-6 hola"></div>
-      <div class="col-lg-3 col-md-4 col-6 hola"></div>
-      <div class="col-lg-3 col-md-4 col-6 hola"></div>
-      <div class="col-lg-3 col-md-4 col-6 hola"></div>
-      <div class="col-lg-3 col-md-4 col-6 hola"></div>
-      <div class="col-lg-3 col-md-4 col-6 hola"></div>
-      <div class="col-lg-3 col-md-4 col-6 hola"></div>
+      <section id="myDIV">
+        <div class="col-lg-3 col-md-4 col-6 hola"></div>
+        <div class="col-lg-3 col-md-4 col-6 hola"></div>
+        <div class="col-lg-3 col-md-4 col-6 hola"></div>
+      </section>
     </div>
   </div>
   <!-- /.container -->
