--- a/index1.html
+++ b/index1.html
@@ -19,20 +19,20 @@
     </header>
     <nav>
       <a href="#"><h3 class="new">New Color</h3></a> <!--refresh random variable-->
-      <a href="#"><h3 class="easy" onclick="myFunction()">Easy</h3></a><!--3-->
-      <a href="#"><h3 class="hard">Hard</h3></a><!--9-->  
+      <!-- <a href="#"><h3 class="easy" onclick="myFunction()">Easy</h3></a>3 -->
+      <!-- <a href="#"><h3 class="hard">Hard</h3></a>9   -->
     </nav>
 <article>
       <!-- Page Content -->
   <div class="container">
     <hr class="mt-2 mb-5">
     <div class="row text-center text-lg-left">
-      <div class="col-lg-3 col-md-4 col-6 hola"></div>
-      <div class="col-lg-3 col-md-4 col-6 hola"></div>
-      <div class="col-lg-3 col-md-4 col-6 hola"></div>
-      <div class="col-lg-3 col-md-4 col-6 hola "></div>
-      <div class="col-lg-3 col-md-4 col-6 hola"></div>
-      <div class="col-lg-3 col-md-4 col-6 hola"></div>
+      <div class="col-lg-3 col-md-4 col-6 hola" id="myDIV"></div>
+      <div class="col-lg-3 col-md-4 col-6 hola" id="myDIV"></div>
+      <div class="col-lg-3 col-md-4 col-6 hola" id="myDIV"></div>
+      <div class="col-lg-3 col-md-4 col-6 hola" id="myDIV"></div>
+      <div class="col-lg-3 col-md-4 col-6 hola" id="myDIV"></div>
+      <div class="col-lg-3 col-md-4 col-6 hola" id="myDIV"></div>
     </div>
   </div>
   <!-- /.container -->
